# insurance-claim-denial-rag-imr-explorer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
scripts/: inspect_data.py
